# godbolt_link

./: README.md  setup.cfg
godbolt_link/: __init__.py  __main__.py  lib.py
