[metadata]
name = godbolt_link
version = attr: godbolt_link.__version__
description = Command-line tool and library to generate Compiler Explorer links
long_description = file: README.md
long_description_content_type = text/markdown
author = Yaroslav Krylov
author_email = krylov.yaroslav@gmail.com
url = https://github.com/YarikTH/godbolt_link
project_urls =
    Repository = https://github.com/YarikTH/godbolt_link
    Issues = https://github.com/YarikTH/godbolt_link/issues
license = MIT
license_files=LICENSE
platform = any
keywords = cli, command-line, terminal, compiler, compilation, compiler-explorer, godbolt
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    lzstring>=1.0.4

[options.entry_points]
console_scripts =
    godbolt_link = godbolt_link.__main__:main
